@@ -220,6 +220,8 @@ Note: The @ character can be used in place of the * character. String parameter 
 .br
 * links FNAME: print sources and sinks for filter FNAME (either builtin or JS filter)
 .br
+* defer: print defer mode help
+.br
 * FNAME: print filter FNAME info (multiple FNAME can be given)
 .br
   - For meta-filters, use FNAME:INST, e.g. ffavin:avfoundation
@@ -5160,9 +5162,9 @@ Authors: GPAC developers, see git repo history (-log)
 .br
 For bug reports, feature requests, more information and source code, visit https://github.com/gpac/gpac
 .br
-build: 2.4
+build: 2.5-DEV
 .br
-Copyright: (c) 2000-2023 Telecom Paris distributed under LGPL v2.1+ - https://gpac.io
+Copyright: (c) 2000-2024 Telecom Paris distributed under LGPL v2.1+ - https://gpac.io
 .br
 .SH SEE ALSO
 .LP
